--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">WhoIsKiller</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
     <string name="str_take">Take</string>
     <string name="str_show">Show</string>
+    <string name="title_activity_picture">PictureActivity</string>
+
 </resources>
