--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="str_take">Take</string>
+    <string name="str_switch">Switch</string>
     <string name="str_show">Show</string>
     <string name="str_defaultDesc">Default Description</string>
     <string name="title_activity_picture">PictureActivity</string>
